fix: dropdown navs now have a higher z-index than the menu items they came from

--- a/frontend/components/Dropdown/Dropdown.css
+++ b/frontend/components/Dropdown/Dropdown.css
@@ -4,6 +4,7 @@
   box-shadow: 7px 6px 25px rgba(0, 0, 0, 0.3);
   padding: 10px;
   position: relative;
+  z-index: 3;
 }
 
 .dropdown-tooltip:before {
